Revision history for Perl extension Util::H2O.

0.26	not yet released
	- Increased minimum required Perl version to 5.8.9

0.24	Wed, Dec 13 2023	commit 10a8b75ad51a195fc8c8a7a5e8633bec4bf6eb8b
	- fix a bug where o2h would die on scalars that looked like options
	  (Thanks @oodler577!)

0.22	Sat, Jan 28 2023	commit d8d5d8b2acc0f6518c7e09b26df0ea486d118006
	- fix a bug where -arrays was not passed into hashes of hashes

0.20	Sat, Jan 14 2023	commit 9d67f1da9c63f5d5d7de34ceebf0a4d5f8fc68c1
	- added "-arrays" option to h2o and o2h
	- documentation updates

0.18	Sun, May  1 2022	commit d2e49333cde8aa4e3a05d4f457b5b5e66781d6c9
	- added "o2h" function
	- added "-pass" option
	- updated tests, Cookbook, and other documentation

0.16	Sun, Oct 17 2021	commit 99b3152f5617bfe9bf1b86bc4d4ce798ac21f11c
	- allowed "-classify" into current package
	- added "Cookbook" to documentation

0.14	Mon, Aug  2 2021	commit 6c8da85d981bff4c3d462956fa68b5b632f5665c
	- WARNING: Potentially Incompatible Changes:
		- limited conditions under which a key DESTROY is allowed
	- added the "-destroy" option
	- added the "-isa" option

0.12	Mon, Jul 19 2021	commit 15fa3f951855185e0fc41d6db88fe3384cbd84a6
	- added the "-ro" option for immutable objects/hashes
	- WARNING: Potentially Incompatible Changes:
		- the constructor generated by the "-new" option now locks
		  the new object's keyset (unless "-lock" is disabled)
		- the "-recurse" option now passes down the value of the
		  "-lock" option to nested hashes in addition to the new "-ro"
	- documented AUTOLOAD and added tests
	- module now issues a warning that hashes can't be locked on old Perls

0.10	Mon, Jun  1 2020	commit 6db2a1d4cdf1a82ad2efe00f402a9596fa14cbfa
	- added "-classify" option
	- added "-nolock" option

0.08	Sat, May 23 2020	commit da41ca7d38dc99254a9aeabe0aaab1b4a94585ac
	- WARNING: Potentially Incompatible Changes:
		- methods created with "-meth" are removed from the hash by default
	- minor doc updates
