@@ -4,18 +4,21 @@ use strict;
 use Test::More tests=>1;
 use Util::H2O;
 use Util::H2O::Also;
-use Benchmark 'cmpthese';
+use Benchmark qw/ timethese cmpthese /;
 
 my %hash = ( Hello=>'World' );
 
 my $o1 = h2o {%hash};
 my $o2 = Util::H2O::Also->new({%hash});
 
-cmpthese(-2, {
+my $r = timethese(-2, {
     'H2O'  => sub { $o1->Hello },
     'Also' => sub { $o2->Hello },
 });
+cmpthese $r;
 
-pass 'TODO';
+my $ratio = $$r{H2O}->iters / $$r{Also}->iters;
+ok $ratio > 5.5, 'expect Util::H2O to be ~6x faster than Util::H2O::Also, actual ratio '
+    .sprintf('%.2f', $ratio);
 
 done_testing;
